--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="Swedish Wooden Homes. Collection of images of swedish wooden homes architecture projects.">
+    <meta name="keywords" content="Sweeden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction">
     <!-- Title -->
     <title>Swedish Wooden Homes</title>
     <!-- Favicon -->
@@ -12,7 +15,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon_io/site.webmanifest">
   </head>
-  
+
   <body>
     
   </body>
