--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   </head>
 
   <body>
-    
+    <!-- Header -->
+    <header>Header</header>
+    <!-- Main -->
+    <main>Main</main>
+    <!-- Footer -->
+    <footer>Footer</footer>
   </body>
 </html>
