--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 
   <body>
     <!-- Header -->
-    <header>Header</header>
+    <header>
+        <a href="index.html">
+            <h1>SWHOMES</h1>
+        </a>
+        
+    </header>
     <!-- Main -->
     <main>Main</main>
     <!-- Footer -->
