Create navigation section

--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <h1>SWHOMES</h1>
+            <h1 id="logo">SWHOMES</h1>
         </a>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
         
     </header>
     <!-- Main -->
