--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="manifest" href="assets/favicon_io/site.webmanifest">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-
   </head>
 
   <body>
@@ -25,6 +24,8 @@
         <a href="index.html">
             <h1 id="logo">SWHOMES</h1>
         </a>
+        <input type="checkbox" name="nav-toggle" id="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">x</label>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
