Add footer content and icons,add icon to header menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1 id="logo">SWHOMES</h1>
         </a>
         <input type="checkbox" name="nav-toggle" id="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">x</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
@@ -38,6 +38,14 @@
     <!-- Main -->
     <main>Main</main>
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="visit our twitter page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a></li>
+        </ul>
+    </footer>
+    <!-- Font Awesome kit-->
+    <script src="https://kit.fontawesome.com/b6093654ea.js" crossorigin="anonymous"></script>
   </body>
 </html>
