--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>Main</main>
     <!-- Footer -->
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a></li>
             <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="visit our twitter page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a></li>
             <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a></li>
