Add home background imageand and make it responsive

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,9 @@
 
     </header>
     <!-- Main -->
-    <main>Main</main>
+    <main>
+        main
+    </main>
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
