--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
         
     </header>
     <!-- Main -->
-    <main>Main</main>
+    <main>
+        <section id="landscape">
+            
+        </section>
+    </main>
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
