Add text content to home page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <h1 id="logo">SWHOMES</h1>
+            <h1 id="logo">Swhomes</h1>
         </a>
         <input type="checkbox" name="nav-toggle" id="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
@@ -38,7 +38,17 @@
     <!-- Main -->
     <main>
         <section id="landscape">
-            
+            <div id="cover-text">
+                <h2>Swedish Wooden Homes</h2>
+                <h3>Inspiration</h3>
+            </div> 
+            <div id="content">
+                <p>A place to experience the latest swedish wooden homes projects.</p>
+                <p>A platform to collect and spread visual content</p>
+                <p>We are an ever-evolving tool for anybody who has a passion about architecture and design.</p>
+                <p>Every day, architects and designers send us their latest projects. We collect, curate, and publish the best information on our ever-growing database of knowledge, delivering our platform
+                to readers.</p>
+            </div>
         </section>
     </main>
     <!-- Footer -->
