Add images to galley

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Swedish Wooden Homes. Collection of images of swedish wooden homes architecture projects.">
     <meta name="keywords"
-        content="Sweeden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction">
+        content="Sweden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction">
     <!-- Title -->
     <title>Swedish Wooden Homes</title>
     <!-- Favicon -->
@@ -25,7 +25,7 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <h1 id="logo">SWHOMES</h1>
+            <h1 id="logo">Swhomes</h1>
         </a>
         <input type="checkbox" name="nav-toggle" id="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
