--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
     <meta name="description" content="Swedish Wooden Homes. Collection of images of swedish wooden homes architecture projects.">
-    <meta name="keywords" content="Sweeden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction">
+    <meta name="keywords" content="Sweden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction">
     <!-- Title -->
     <title>Swedish Wooden Homes</title>
     <!-- Favicon -->
@@ -22,7 +22,7 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <h1 id="logo">SWHOMES</h1>
+            <h1 id="logo">Swhomes</h1>
         </a>
         <input type="checkbox" name="nav-toggle" id="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
@@ -36,7 +36,22 @@
         
     </header>
     <!-- Main -->
-    <main>Main</main>
+    <main>
+        <section id="gallery">
+            <div id="photos">
+                <img src="assets/images/gimme-shelter-gimme-shelter-solutions_7.jpeg" alt="Modern Wooden House in Sewdish Forest by Gimme Shelter Solutions ">
+                <img src="assets/images/house-for-two-artists-mikael-bergquist-arkitektkontor_9.jpeg" alt="Modern Wooden House in Sewdish Forest by Mikael Bergquist Architect">
+                <img src="assets/images/12-villa-hedberg-marge-at-fowelin.jpeg" alt="Villa Hedberg Marge at Fowelin.">
+                <img src="assets/images/vallda-3.jpeg" alt="Vallda Modern Wooden House in Sewdish Forest">
+                <img src="assets/images/22005-089.jpeg" alt="Modern Black Wooden House in Snow-Covered Sewdish Forest">
+                <img src="assets/images/msv-srgb-done-031.jpeg" alt="Modern Wooden House in Sewdish Forest by Johan Sundberg Architect">
+                <img src="assets/images/NORM_ARCHITECTS_ARCHIPELAGO_HOUSE_15.jpeg" alt="Modern Wooden Archipealago House by Norm Architects">
+                <img src="assets/images/VillaBlÜbÑr109.jpeg" alt="Modern Black Wooden House in Sewdish Forest">
+                <img src="assets/images/Lookofsky_Monochrome_House_-_Photographer_Mattias_Hamrén-16.jpeg" alt="Modern Red Wooden House in Sewdish Coast by Lookofsk Architecture">
+                <img src="assets/images/Bollbacken-©MikaelOlsson5268b.jpeg" alt="Modern Red Wooden House in Sewdish Fields by Söderberg Söderberg Architects">
+            </div>
+        </section>
+    </main>
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
