--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
     <meta name="description" content="Swedish Wooden Homes. Collection of images of swedish wooden homes architecture projects.">
-    <meta name="keywords" content="Sweeden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction">
+    <meta name="keywords" content="Sweden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction">
     <!-- Title -->
     <title>Swedish Wooden Homes</title>
     <!-- Favicon -->
