--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,25 @@
     </header>
     <!-- Main -->
     <main>
-        main
+        <section id="contact">
+            <form action="https://formdump.codeinstitute.net" id="contact-form" method="post">
+                <h2>Send us your project</h2>
+                <h3>Sign up</h3>
+                <label for="username">Username</label>
+                <input type="text" name="username" id="username" placeholder="username">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" placeholder="email">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" placeholder="password">
+                <input type="submit" value="Sign up">
+            </form>   
+            <form action="https://formdump.codeinstitute.net" id="submit" method="post">
+                <h3>Upload your project</h3>
+                <label for="file"></label>
+                <input type="file" name="file" id="file">
+                <input type="submit" value="Upload">
+            </form>
+        </section>
     </main>
     <!-- Footer -->
     <footer>
