--- a/contact.html
+++ b/contact.html
@@ -45,18 +45,17 @@
                 <h2>Send us your project</h2>
                 <h3>Sign up</h3>
                 <label for="username">Username</label>
-                <input type="text" name="username" id="username" placeholder="username">
+                <input type="text" name="username" id="username" placeholder="username" class="text-input" required>
                 <label for="email">Email</label>
-                <input type="email" name="email" id="email" placeholder="email">
+                <input type="email" name="email" id="email" placeholder="email" class="text-input" required>
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password" placeholder="password">
-                <input type="submit" value="Sign up">
+                <input type="password" name="password" id="password" placeholder="password" class="text-input" required>
+                <input type="submit" value="Sign up" class="text-input">
             </form>   
             <form action="https://formdump.codeinstitute.net" id="submit" method="post">
                 <h3>Upload your project</h3>
-                <label for="file"></label>
-                <input type="file" name="file" id="file">
-                <input type="submit" value="Upload">
+                <input type="file" name="file" id="file" accept="image/png, image/jpeg, .pdf" class="text-input">
+                <input type="submit" value="Upload" class="submit-button">
             </form>
         </section>
     </main>
