--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
     <!-- Main -->
     <main>
         <section id="contact">
+            <h2>Send us your project</h2>
             <form action="https://formdump.codeinstitute.net" id="contact-form" method="post">
-                <h2>Send us your project</h2>
                 <h3>Sign up</h3>
                 <label for="username">Username</label>
                 <input type="text" name="username" id="username" placeholder="username" class="text-input" required>
@@ -50,11 +50,11 @@
                 <input type="email" name="email" id="email" placeholder="email" class="text-input" required>
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password" placeholder="password" class="text-input" required>
-                <input type="submit" value="Sign up" class="text-input">
+                <input type="submit" value="Sign up" class="submit-button">
             </form>   
-            <form action="https://formdump.codeinstitute.net" id="submit" method="post">
+            <form action="https://formdump.codeinstitute.net" id="upload-form" method="post">
                 <h3>Upload your project</h3>
-                <input type="file" name="file" id="file" accept="image/png, image/jpeg, .pdf" class="text-input">
+                <input type="file" name="file" id="file" accept="image/png, image/jpeg, .pdf" class="submit-button">
                 <input type="submit" value="Upload" class="submit-button">
             </form>
         </section>
