--- a/index.html
+++ b/index.html
@@ -43,11 +43,23 @@
                 <h3>Inspiration</h3>
             </div> 
             <div id="content">
-                <p>A place to experience the latest swedish wooden homes projects.</p>
-                <p>A platform to collect and spread visual content</p>
-                <p>We are an ever-evolving tool for anybody who has a passion about architecture and design.</p>
-                <p>Every day, architects and designers send us their latest projects. We collect, curate, and publish the best information on our ever-growing database of knowledge, delivering our platform
-                to readers.</p>
+                <div id="swh-intro">
+                    <img src="assets/images/swh-high-resolution-logo-black-transparent.png" alt="SWH Logo">
+                    <p>A place to experience the latest swedish wooden homes projects.</p>
+                    <p>A platform to collect and spread visual content</p>
+                    <p>We are an ever-evolving tool for anybody who has a passion about architecture and design.</p>
+                </div>
+                <div id="our-job"></div>
+                <h4>Our job</h4>
+                    <p>Our job is to improve the quality of life for the billions of people who will move into cities over the coming decades,
+                    by providing knowledge, tools, and inspiration for those who will meet the challenge of designing for them.</p>
+                    <p>Every day, architects and designers send us their latest projects. We collect, curate, and publish the best information on our ever-growing database of knowledge, delivering our platform
+                    to readers.</p>
+                <div id="our-team">
+                    <p>“We are a motivated team that is constantly thinking about the future and breaking paradigms. Now, our challenge is to
+                    build on our momentum, and broaden our horizon”.
+</p>
+                </div>
             </div>
         </section>
     </main>
