Add about page, move text content from index page to about

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Swedish Wooden Homes. Collection of images of swedish wooden homes architecture projects.">
     <meta name="keywords"
-        content="Sweden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction">
+        content="Sweeden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction">
     <!-- Title -->
     <title>Swedish Wooden Homes</title>
     <!-- Favicon -->
@@ -32,33 +32,38 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html" class="active">About</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
     </header>
     <!-- Main -->
     <main>
-        <section id="contact">
-            <h2>Send us your project</h2>
-            <form action="https://formdump.codeinstitute.net" id="contact-form" method="post">
-                <h3>Sign up</h3>
-                <label for="username">Username</label>
-                <input type="text" name="username" id="username" placeholder="username" class="text-input" required>
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email" placeholder="email" class="text-input" required>
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password" placeholder="password" class="text-input" required>
-                <input type="submit" value="Sign up" class="submit-button">
-            </form>   
-            <form action="https://formdump.codeinstitute.net" id="upload-form" method="post">
-                <h3>Upload your project</h3>
-                <input type="file" name="file" id="file" accept="image/png, image/jpeg, .pdf" class="submit-button">
-                <input type="submit" value="Upload" class="submit-button">
-            </form>
-        </section>
+        <div id="content">
+            <div id="swh-intro">
+                <img src="assets/images/swh-high-resolution-logo-black-transparent.png" alt="SWH Logo" id="swh-logo">
+                <p>A place to experience the latest swedish wooden homes projects.</p>
+                <p>A platform to collect and spread visual content</p>
+                <p>We are an ever-evolving tool for anybody who has a passion about architecture and design.</p>
+            </div>
+            <div id="our-job"></div>
+            <h4>Our job</h4>
+            <p>Our job is to improve the quality of life for the billions of people who will move into cities over the coming
+                decades,
+                by providing knowledge, tools, and inspiration for those who will meet the challenge of designing for them.</p>
+            <p>Every day, architects and designers send us their latest projects. We collect, curate, and publish the best
+                information on our ever-growing database of knowledge, delivering our platform
+                to readers.</p>
+            <div id="our-team">
+                <h4>Our team</h4>
+                <p>“We are a motivated team that is constantly thinking about the future and breaking paradigms. Now, our
+                    challenge is to
+                    build on our momentum, and broaden our horizon”.
+                </p>
+            </div>
+        </div>
     </main>
     <!-- Footer -->
     <footer>
