--- a/gallery.html
+++ b/gallery.html
@@ -29,6 +29,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="gallery.html" class="active">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
