Ajust style index page

--- a/index.html
+++ b/index.html
@@ -33,15 +33,14 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-        </nav>
-        
+        </nav> 
     </header>
     <!-- Main -->
     <main>
         <section id="landscape">
             <div id="cover-text">
-                <h2>Swedish Wooden Homes</h2>
-                <h3>Inspiration</h3>
+                <h2><a href="about.html" class="swh-link">Swedish Wooden Homes</a></h2>
+                <h3><a href="gallery.html" class="swh-link">Inspiration</a></h3>
             </div> 
         </section>
     </main>
