--- a/about.html
+++ b/about.html
@@ -42,21 +42,22 @@
     <!-- Main -->
     <main>
         <div id="content">
-            <div id="swh-intro">
+            <div id="swh-intro" class="text-about">
                 <img src="assets/images/swh-high-resolution-logo-black-transparent.png" alt="SWH Logo" id="swh-logo">
                 <p>A place to experience the latest swedish wooden homes projects.</p>
                 <p>A platform to collect and spread visual content</p>
                 <p>We are an ever-evolving tool for anybody who has a passion about architecture and design.</p>
             </div>
-            <div id="our-job"></div>
-            <h4>Our job</h4>
-            <p>Our job is to improve the quality of life for the billions of people who will move into cities over the coming
+            <div id="our-job" class="text-about">
+                <h4>Our job</h4>
+                <p>Our job is to improve the quality of life for the billions of people who will move into cities over the coming
                 decades,
                 by providing knowledge, tools, and inspiration for those who will meet the challenge of designing for them.</p>
-            <p>Every day, architects and designers send us their latest projects. We collect, curate, and publish the best
+                <p>Every day, architects and designers send us their latest projects. We collect, curate, and publish the best
                 information on our ever-growing database of knowledge, delivering our platform
                 to readers.</p>
-            <div id="our-team">
+            </div>
+            <div id="our-team" class="text-about">
                 <h4>Our team</h4>
                 <p>“We are a motivated team that is constantly thinking about the future and breaking paradigms. Now, our
                     challenge is to
