change style details

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <main>
         <section id="landscape">
             <div id="cover-text">
-                <h2><a href="about.html" class="swh-link">Swedish Wooden Homes</a></h2>
-                <h3><a href="gallery.html" class="swh-link">Inspiration</a></h3>
+                <h2>Swedish Wooden Homes</h2>
+                <h3>Inspiration</h3>
             </div> 
         </section>
     </main>
