--- a/gallery.html
+++ b/gallery.html
@@ -40,16 +40,16 @@
     <main>
         <section id="gallery">
             <div id="photos">
-                <img src="assets/images/gimme-shelter-gimme-shelter-solutions_7.jpeg" alt="Modern Wooden House in Sewdish Forest by Gimme Shelter Solutions ">
-                <img src="assets/images/house-for-two-artists-mikael-bergquist-arkitektkontor_9.jpeg" alt="Modern Wooden House in Sewdish Forest by Mikael Bergquist Architect">
-                <img src="assets/images/12-villa-hedberg-marge-at-fowelin.jpeg" alt="Villa Hedberg Marge at Fowelin.">
-                <img src="assets/images/vallda-3.jpeg" alt="Vallda Modern Wooden House in Sewdish Forest">
-                <img src="assets/images/22005-089.jpeg" alt="Modern Black Wooden House in Snow-Covered Sewdish Forest">
-                <img src="assets/images/msv-srgb-done-031.jpeg" alt="Modern Wooden House in Sewdish Forest by Johan Sundberg Architect">
-                <img src="assets/images/NORM_ARCHITECTS_ARCHIPELAGO_HOUSE_15.jpeg" alt="Modern Wooden Archipealago House by Norm Architects">
-                <img src="assets/images/VillaBlÜbÑr109.jpeg" alt="Modern Black Wooden House in Sewdish Forest">
-                <img src="assets/images/Lookofsky_Monochrome_House_-_Photographer_Mattias_Hamrén-16.jpeg" alt="Modern Red Wooden House in Sewdish Coast by Lookofsk Architecture">
-                <img src="assets/images/Bollbacken-©MikaelOlsson5268b.jpeg" alt="Modern Red Wooden House in Sewdish Fields by Söderberg Söderberg Architects">
+                <img src="assets/images/gimme-shelter-gimme-shelter-solutions-7.webp" alt="Modern Wooden House in Sewdish Forest by Gimme Shelter Solutions ">
+                <img src="assets/images/house-for-two-artists-mikael-bergquist-arkitektkontor-9.webp" alt="Modern Wooden House in Sewdish Forest by Mikael Bergquist Architect">
+                <img src="assets/images/12-villa-hedberg-marge-at-fowelin.webp" alt="Villa Hedberg Marge at Fowelin.">
+                <img src="assets/images/vallda-3.webp" alt="Vallda Modern Wooden House in Sewdish Forest">
+                <img src="assets/images/22005-089.webp" alt="Modern Black Wooden House in Snow-Covered Sewdish Forest">
+                <img src="assets/images/msv-srgb-done-031.webp" alt="Modern Wooden House in Sewdish Forest by Johan Sundberg Architect">
+                <img src="assets/images/norm-architects-archipealago-house-15.webp" alt="Modern Wooden Archipealago House by Norm Architects">
+                <img src="assets/images/villablabar109.webp" alt="Modern Black Wooden House in Sewdish Forest">
+                <img src="assets/images/lookofsky-monochrome-house-photographer-mattias-hamran-16.webp" alt="Modern Red Wooden House in Sewdish Coast by Lookofsk Architecture">
+                <img src="assets/images/bollbacken-Mikaelolsson5268b.webp" alt="Modern Red Wooden House in Sewdish Fields by Söderberg Söderberg Architects">
             </div>
         </section>
     </main>
