change size and name of images

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     <main>
         <div id="content">
             <div id="swh-intro" class="text-about">
-                <img src="assets/images/swh-high-resolution-logo-black-transparent.png" alt="SWH Logo" id="swh-logo">
+                <img src="assets/images/logo.webp" alt="SWH Logo" id="swh-logo">
                 <p>A place to experience the latest swedish wooden homes projects.</p>
                 <p>A platform to collect and spread visual content</p>
                 <p>We are an ever-evolving tool for anybody who has a passion about architecture and design.</p>
