Add text and initial style to about page

--- a/about.html
+++ b/about.html
@@ -44,25 +44,19 @@
         <div id="content">
             <div id="swh-intro" class="text-about">
                 <img src="assets/images/logo.webp" alt="SWH Logo" id="swh-logo">
-                <p>A place to experience the latest swedish wooden homes projects.</p>
-                <p>A platform to collect and spread visual content</p>
                 <p>We are an ever-evolving tool for anybody who has a passion about architecture and design.</p>
+                <p>A place to experience the latest swedish wooden homes projects.</p>
+                <p>A platform to collect and spread architecture projects.</p>
             </div>
             <div id="our-job" class="text-about">
                 <h4>Our job</h4>
-                <p>Our job is to improve the quality of life for the billions of people who will move into cities over the coming
-                decades,
-                by providing knowledge, tools, and inspiration for those who will meet the challenge of designing for them.</p>
-                <p>Every day, architects and designers send us their latest projects. We collect, curate, and publish the best
-                information on our ever-growing database of knowledge, delivering our platform
-                to readers.</p>
+                <p>Our job is to collect and facilitate the access to swedish wooden homes architecture, providing inspiration.</p>
+                <p>Every day, architects and designers send us their latest projects. We collect, curate, and publish their work on our ever-growing database.</p>
             </div>
             <div id="our-team" class="text-about">
                 <h4>Our team</h4>
                 <p>“We are a motivated team that is constantly thinking about the future and breaking paradigms. Now, our
-                    challenge is to
-                    build on our momentum, and broaden our horizon”.
-                </p>
+                    challenge is to build on our momentum, and broaden our horizon”.</p>
             </div>
         </div>
     </main>
