--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 
     </header>
     <!-- Main -->
-    <main>
+    <main id="about">
         <div id="content">
             <div id="swh-intro" class="text-about">
                 <img src="assets/images/logo.webp" alt="SWH Logo" id="swh-logo">
@@ -58,6 +58,14 @@
                 <p>“We are a motivated team that is constantly thinking about the future and breaking paradigms. Now, our
                     challenge is to build on our momentum, and broaden our horizon”.</p>
             </div>
+        </div>
+        <div>
+            <ul id="contacts">
+                <li><a href="tel:012-345678" class="contact-info"><i class="fa-solid fa-phone"></i> 012-345678</a></li>
+                <li><a href="mailto:swhomes@swh.com" class="contact-info"><i class="fa-solid fa-envelope"></i> swhomes@swh.com</a></li>
+                <li><i class="fa-solid fa-location-dot" class="contact-info"></i> Halmstad, Sweeden</li>
+            </ul>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d70225.90069730011!2d12.8335769!3d56.6302475!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465105d7635db347%3A0x6dbef716017039f8!2sHalmstad%2C%20Sweden!5e0!3m2!1sen!2ses!4v1699010451351!5m2!1sen!2ses" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map" title="goolge maps link"></iframe>  
         </div>
     </main>
     <!-- Footer -->
