Try to change style in list of about page

--- a/about.html
+++ b/about.html
@@ -1,89 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Meta tags for search engines -->
-    <meta name="description"
-        content="Swedish Wooden Homes. Collection of images of swedish wooden homes architecture projects.">
-    <meta name="keywords"
-        content="Sweeden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction">
+    <meta
+      name="description"
+      content="Swedish Wooden Homes. Collection of images of swedish wooden homes architecture projects."
+    />
+    <meta
+      name="keywords"
+      content="Sweeden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction"
+    />
     <!-- Title -->
     <title>Swedish Wooden Homes</title>
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicon_io/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="assets/favicon_io/site.webmanifest" />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
 
-<body>
+  <body>
     <!-- Header -->
     <header>
-        <a href="index.html">
-            <h1 id="logo">Swhomes</h1>
-        </a>
-        <input type="checkbox" name="nav-toggle" id="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
-        <nav>
-            <ul id="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-
+      <a href="index.html">
+        <h1 id="logo">Swhomes</h1>
+      </a>
+      <input type="checkbox" name="nav-toggle" id="nav-toggle" />
+      <label for="nav-toggle" class="nav-toggle-label"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
+      <nav>
+        <ul id="menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html" class="active">About</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
     <!-- Main -->
     <main id="about">
-        <div id="content">
-            <div id="swh-intro" class="text-about">
-                <img src="assets/images/logo.webp" alt="SWH Logo" id="swh-logo">
-                <p>We are an ever-evolving tool for anybody who has a passion about architecture and design.</p>
-                <p>A place to experience the latest swedish wooden homes projects.</p>
-                <p>A platform to collect and spread architecture projects.</p>
-            </div>
-            <div id="our-job" class="text-about">
-                <h4>Our job</h4>
-                <p>Our job is to collect and facilitate the access to swedish wooden homes architecture, providing inspiration.</p>
-                <p>Every day, architects and designers send us their latest projects. We collect, curate, and publish their work on our ever-growing database.</p>
-            </div>
-            <div id="our-team" class="text-about">
-                <h4>Our team</h4>
-                <p>“We are a motivated team that is constantly thinking about the future and breaking paradigms. Now, our
-                    challenge is to build on our momentum, and broaden our horizon”.</p>
-            </div>
+      <div id="content">
+        <div id="swh-intro" class="text-about">
+          <img src="assets/images/logo.webp" alt="SWH Logo" id="swh-logo" />
+          <p>
+            We are an ever-evolving tool for anybody who has a passion about
+            architecture and design.
+          </p>
+          <p>A place to experience the latest swedish wooden homes projects.</p>
+          <p>A platform to collect and spread architecture projects.</p>
         </div>
-        <div>
-            <ul id="contact-details">
-                <li><a href="tel:012-345678"><i class="fa-solid fa-phone"></i> 012-345678</a></li>
-                <li><a href="mailto:swhomes@swh.com"><i class="fa-solid fa-envelope"></i> swhomes@swh.com</a></li>
-                <li><i class="fa-solid fa-location-dot"></i> Halmstad, Sweeden</li>
-            </ul>
+        <div id="our-job" class="text-about">
+          <h4>Our job</h4>
+          <p>
+            Our job is to collect and facilitate the access to swedish wooden
+            homes architecture, providing inspiration.
+          </p>
+          <p>
+            Every day, architects and designers send us their latest projects.
+            We collect, curate, and publish their work on our ever-growing
+            database.
+          </p>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d70225.90069730011!2d12.8335769!3d56.6302475!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465105d7635db347%3A0x6dbef716017039f8!2sHalmstad%2C%20Sweden!5e0!3m2!1sen!2ses!4v1699010451351!5m2!1sen!2ses" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="goolge maps link"></iframe>  
+        <div id="our-team" class="text-about">
+          <h4>Our team</h4>
+          <p>
+            “We are a motivated team that is constantly thinking about the
+            future and breaking paradigms. Now, our challenge is to build on our
+            momentum, and broaden our horizon”.
+          </p>
+        </div>
+      </div>
+      <div>
+        <ul id="contact-details">
+          <li class="contact-info">
+            <a href="tel:012-345678"
+              ><i class="fa-solid fa-phone"></i> 012-345678</a
+            >
+          </li>
+          <li class="contact-info">
+            <a href="mailto:swhomes@swh.com"
+              ><i class="fa-solid fa-envelope"></i> swhomes@swh.com</a
+            >
+          </li>
+          <li class="contact-info">
+            <i class="fa-solid fa-location-dot"></i> Halmstad, Sweeden
+          </li>
+        </ul>
+      </div>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d70225.90069730011!2d12.8335769!3d56.6302475!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465105d7635db347%3A0x6dbef716017039f8!2sHalmstad%2C%20Sweden!5e0!3m2!1sen!2ses!4v1699010451351!5m2!1sen!2ses"
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+        title="goolge maps link"
+      ></iframe>
     </main>
     <!-- Footer -->
     <footer>
-        <ul id="social-networks">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="visit our facebook page (opens in a new tab)"><i
-                        class="fa-brands fa-square-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="visit our twitter page (opens in a new tab)"><i
-                        class="fa-brands fa-square-x-twitter"></i></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="visit our instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-square-instagram"></i></a></li>
-        </ul>
+      <ul id="social-networks">
+        <li>
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="visit our facebook page (opens in a new tab)"
+            ><i class="fa-brands fa-square-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.twitter.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="visit our twitter page (opens in a new tab)"
+            ><i class="fa-brands fa-square-x-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="visit our instagram page (opens in a new tab)"
+            ><i class="fa-brands fa-square-instagram"></i
+          ></a>
+        </li>
+      </ul>
     </footer>
     <!-- Font Awesome kit-->
-    <script src="https://kit.fontawesome.com/b6093654ea.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/b6093654ea.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
