re-format style and code lost due to a functioning  problem of codeanywhere

--- a/about.html
+++ b/about.html
@@ -92,27 +92,16 @@
       </div>
       <div>
         <ul id="contact-details">
-          <li class="contact-info">
-            <a href="tel:012-345678"
-              ><i class="fa-solid fa-phone"></i> 012-345678</a
-            >
+          <li>
+            <a href="tel:012-345678"><i class="fa-solid fa-phone"></i> 012-345678</a>
           </li>
-          <li class="contact-info">
-            <a href="mailto:swhomes@swh.com"
-              ><i class="fa-solid fa-envelope"></i> swhomes@swh.com</a
-            >
+          <li>
+            <a href="mailto:swhomes@swh.com"><i class="fa-solid fa-envelope"></i> swhomes@swh.com</a>
           </li>
-          <li class="contact-info">
-            <i class="fa-solid fa-location-dot"></i> Halmstad, Sweeden
-          </li>
+          <li><i class="fa-solid fa-location-dot"></i> Halmstad, Sweeden</li>
         </ul>
       </div>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d70225.90069730011!2d12.8335769!3d56.6302475!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465105d7635db347%3A0x6dbef716017039f8!2sHalmstad%2C%20Sweden!5e0!3m2!1sen!2ses!4v1699010451351!5m2!1sen!2ses"
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-        title="goolge maps link"
-      ></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d70225.90069730011!2d12.8335769!3d56.6302475!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465105d7635db347%3A0x6dbef716017039f8!2sHalmstad%2C%20Sweden!5e0!3m2!1sen!2ses!4v1699010451351!5m2!1sen!2ses" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="goolge maps link"></iframe>
     </main>
     <!-- Footer -->
     <footer>
@@ -122,34 +111,27 @@
             href="https://www.facebook.com/"
             target="_blank"
             rel="noopener"
-            aria-label="visit our facebook page (opens in a new tab)"
-            ><i class="fa-brands fa-square-facebook"></i
-          ></a>
+            aria-label="visit our facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
         </li>
         <li>
           <a
             href="https://www.twitter.com/"
             target="_blank"
             rel="noopener"
-            aria-label="visit our twitter page (opens in a new tab)"
-            ><i class="fa-brands fa-square-x-twitter"></i
-          ></a>
+            aria-label="visit our twitter page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
         </li>
         <li>
           <a
             href="https://www.instagram.com/"
             target="_blank"
             rel="noopener"
-            aria-label="visit our instagram page (opens in a new tab)"
-            ><i class="fa-brands fa-square-instagram"></i
-          ></a>
+            aria-label="visit our instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
         </li>
       </ul>
     </footer>
     <!-- Font Awesome kit-->
     <script
       src="https://kit.fontawesome.com/b6093654ea.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </body>
 </html>
