--- a/about.html
+++ b/about.html
@@ -1,41 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
     <meta
       name="description"
-      content="Swedish Wooden Homes. Collection of images of swedish wooden homes architecture projects."
-    />
+      content="Swedish Wooden Homes. Collection of images of swedish wooden homes architecture projects.">
     <meta
       name="keywords"
-      content="Sweeden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction"
-    />
+      content="Sweeden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction">
     <!-- Title -->
     <title>Swedish Wooden Homes</title>
     <!-- Favicon -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/favicon_io/apple-touch-icon.png"
-    />
+      href="assets/favicon_io/apple-touch-icon.png">
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/favicon_io/favicon-32x32.png"
-    />
+      href="assets/favicon_io/favicon-32x32.png">
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/favicon_io/favicon-16x16.png"
-    />
-    <link rel="manifest" href="assets/favicon_io/site.webmanifest" />
+      href="assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon_io/site.webmanifest">
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
 
   <body>
@@ -44,7 +39,7 @@
       <a href="index.html">
         <h1 id="logo">Swhomes</h1>
       </a>
-      <input type="checkbox" name="nav-toggle" id="nav-toggle" />
+      <input type="checkbox" name="nav-toggle" id="nav-toggle">
       <label for="nav-toggle" class="nav-toggle-label"
         ><i class="fa-solid fa-bars"></i
       ></label>
@@ -61,7 +56,7 @@
     <main id="about">
       <div id="content">
         <div id="swh-intro" class="text-about">
-          <img src="assets/images/logo.webp" alt="SWH Logo" id="swh-logo" />
+          <img src="assets/images/logo.webp" alt="SWH Logo" id="swh-logo">
           <p>
             We are an ever-evolving tool for anybody who has a passion about
             architecture and design.
