--- a/about.html
+++ b/about.html
@@ -5,29 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta
-      name="description"
-      content="Swedish Wooden Homes. Collection of images of swedish wooden homes architecture projects.">
-    <meta
-      name="keywords"
-      content="Sweeden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction">
+    <meta name="description" content="Swedish Wooden Homes. Collection of images of swedish wooden homes architecture projects.">
+    <meta name="keywords" content="Sweeden, homes, wooden homes, architecture, wooden constrction, swedish architecture, swedish homes, construction">
     <!-- Title -->
     <title>Swedish Wooden Homes</title>
     <!-- Favicon -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/favicon_io/apple-touch-icon.png">
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/favicon_io/favicon-32x32.png">
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/favicon_io/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon_io/site.webmanifest">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -40,9 +25,7 @@
         <h1 id="logo">Swhomes</h1>
       </a>
       <input type="checkbox" name="nav-toggle" id="nav-toggle">
-      <label for="nav-toggle" class="nav-toggle-label"
-        ><i class="fa-solid fa-bars"></i
-      ></label>
+      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
       <nav>
         <ul id="menu">
           <li><a href="index.html">Home</a></li>
@@ -102,31 +85,17 @@
     <footer>
       <ul id="social-networks">
         <li>
-          <a
-            href="https://www.facebook.com/"
-            target="_blank"
-            rel="noopener"
-            aria-label="visit our facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
+          <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
         </li>
         <li>
-          <a
-            href="https://www.twitter.com/"
-            target="_blank"
-            rel="noopener"
-            aria-label="visit our twitter page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
+          <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="visit our twitter page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
         </li>
         <li>
-          <a
-            href="https://www.instagram.com/"
-            target="_blank"
-            rel="noopener"
-            aria-label="visit our instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+          <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
         </li>
       </ul>
     </footer>
     <!-- Font Awesome kit-->
-    <script
-      src="https://kit.fontawesome.com/b6093654ea.js"
-      crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/b6093654ea.js" crossorigin="anonymous"></script>
   </body>
 </html>
