--- a/contact.html
+++ b/contact.html
@@ -63,15 +63,9 @@
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="visit our facebook page (opens in a new tab)"><i
-                        class="fa-brands fa-square-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="visit our twitter page (opens in a new tab)"><i
-                        class="fa-brands fa-square-x-twitter"></i></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="visit our instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-square-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="visit our twitter page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a></li>
         </ul>
     </footer>
     <!-- Font Awesome kit-->
