--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
       <a href="index.html">
         <h1 id="logo">Swhomes</h1>
       </a>
+      <!-- Main navigation menu -->
       <input type="checkbox" name="nav-toggle" id="nav-toggle">
       <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
       <nav>
