change h4 for h2 in about and some text and add validation to upload button

--- a/contact.html
+++ b/contact.html
@@ -45,19 +45,19 @@
         <section id="contact">
             <h2>Send us your project</h2>
             <form action="https://formdump.codeinstitute.net" id="contact-form" method="post">
-                <h3>Sign up</h3>
+                <h3>Sign in</h3>
                 <label for="username">Username</label>
                 <input type="text" name="username" id="username" placeholder="username" class="text-input" required>
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email" placeholder="email" class="text-input" required>
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password" placeholder="password" class="text-input" required>
-                <input type="submit" value="Sign up" class="submit-button">
+                <input type="submit" value="Sign in" class="submit-button">
             </form>   
             <form action="https://formdump.codeinstitute.net" id="upload-form" method="post">
                 <h3>Upload your project</h3>
                 <input type="file" name="file" id="file" accept="image/png, image/jpeg, .pdf" class="submit-button">
-                <input type="submit" value="Upload" class="submit-button">
+                <input type="submit" value="Upload" class="submit-button" required>
             </form>
         </section>
     </main>
