fix images gallery

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <h1 id="logo">Swhomes</h1>
         </a>
         <!-- Main navigation menu -->
-        <input type="checkbox" name="nav-toggle" id="nav-toggle">
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
@@ -56,8 +56,8 @@
             </form>   
             <form action="https://formdump.codeinstitute.net" id="upload-form" method="post">
                 <h3>Upload your project</h3>
-                <input type="file" name="file" id="file" accept="image/png, image/jpeg, .pdf" class="submit-button">
-                <input type="submit" value="Upload" class="submit-button" required>
+                <input type="file" name="file" id="file" accept="image/png, image/jpeg, .pdf" class="submit-button" required>
+                <input type="submit" value="Upload" class="submit-button">
             </form>
         </section>
     </main>
