--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1 id="logo">Swhomes</h1>
         </a>
         <!-- Main navigation menu -->
-        <input type="checkbox" name="nav-toggle" id="nav-toggle">
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
