--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
             <h1 id="logo">Swhomes</h1>
         </a>
         <!-- Main navigation menu -->
-        <input type="checkbox" name="nav-toggle" id="nav-toggle">
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
@@ -41,16 +41,16 @@
     <main>
         <section id="gallery">
             <div id="photos">
-                <img src="assets/images/home1.jpeg" alt="Modern Wooden House in Sewdish Forest by Gimme Shelter Solutions ">
-                <img src="assets/images/home2.jpeg" alt="Modern Wooden House in Sewdish Forest by Mikael Bergquist Architect">
-                <img src="assets/images/home3.jpeg" alt="Villa Hedberg Marge at Fowelin.">
+                <img src="assets/images/home1.webp" alt="Modern Wooden House in Sewdish Forest by Gimme Shelter Solutions ">
+                <img src="assets/images/home2.webp" alt="Modern Wooden House in Sewdish Forest by Mikael Bergquist Architect">
+                <img src="assets/images/home3.webp" alt="Villa Hedberg Marge at Fowelin.">
                 <img src="assets/images/home4.webp" alt="Modern Black Wooden House in Snow-Covered Sewdish Forest">
-                <img src="assets/images/home6.jpeg" alt="Vallda Modern Wooden House in Sewdish Forest">
-                <img src="assets/images/home5.jpeg" alt="Modern Wooden House in Sewdish Forest by Johan Sundberg Architect">
-                <img src="assets/images/home7.jpeg" alt="Modern Wooden Archipealago House by Norm Architects">
-                <img src="assets/images/home8.jpeg" alt="Modern Black Wooden House in Sewdish Forest">
-                <img src="assets/images/home9.jpeg" alt="Modern Red Wooden House in Sewdish Coast by Lookofsk Architecture">
-                <img src="assets/images/home91.jpeg" alt="Modern Red Wooden House in Sewdish Fields by Söderberg Söderberg Architects">
+                <img src="assets/images/home6.webp" alt="Vallda Modern Wooden House in Sewdish Forest">
+                <img src="assets/images/home5.webp" alt="Modern Wooden House in Sewdish Forest by Johan Sundberg Architect">
+                <img src="assets/images/home7.webp" alt="Modern Wooden Archipealago House by Norm Architects">
+                <img src="assets/images/home8.webp" alt="Modern Black Wooden House in Sewdish Forest">
+                <img src="assets/images/home9.webp" alt="Modern Red Wooden House in Sewdish Coast by Lookofsk Architecture">
+                <img src="assets/images/home91.webp" alt="Modern Red Wooden House in Sewdish Fields by Söderberg Söderberg Architects">
             </div>
         </section>
     </main>
