Add header to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -40,6 +40,7 @@
     <!-- Main -->
     <main>
         <section id="gallery">
+            <h2 id="inspiration">Inspiration</h2>
             <div id="photos">
                 <img src="assets/images/home1.webp" alt="Modern Wooden House in Sewdish Forest by Gimme Shelter Solutions ">
                 <img src="assets/images/home2.webp" alt="Modern Wooden House in Sewdish Forest by Mikael Bergquist Architect">
