--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <h1 id="logo">Swhomes</h1>
         </a>
         <!-- Main navigation menu -->
-        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <input type="checkbox" id="nav-toggle" name="nav-toggle" aria-labelledby="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
